--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -142,12 +142,12 @@ sup {
   top: -.5em; }
 
 a {
-  color: #007bff;
+  color: /*#007bff*/orange;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #0056b3;
+    color: /*#0056b3*/orange;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -2152,13 +2152,13 @@ fieldset:disabled a.btn {
   pointer-events: none; }
 
 .btn-primary {
-  color: #fff;
-  background-color: #007bff;
-  border-color: #007bff; }
+  color: /*#fff*/#000;
+  background-color: /*#007bff*/orange;
+  border-color: /*#007bff*/orange; }
   .btn-primary:hover {
     color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc; }
+    background-color: /*#0069d9*/orange;
+    border-color: /*#0062cc*/orange; }
   .btn-primary:focus, .btn-primary.focus {
     -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
             box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5); }
